# api/python/dungeoncoder/_generated/models/__init__.py
@@ -7,6 +7,9 @@ from .boolean_result_status import BooleanResultStatus
 from .configure_params import ConfigureParams
 from .name_param import NameParam
 from .pace_params import PaceParams
+from .statistics import Statistics
+from .statistics_result import StatisticsResult
+from .statistics_result_status import StatisticsResultStatus
 from .string_array_result import StringArrayResult
 from .string_array_result_status import StringArrayResultStatus
 from .tiled_level import TiledLevel
@@ -19,6 +22,9 @@ __all__ = (
     "ConfigureParams",
     "NameParam",
     "PaceParams",
+    "Statistics",
+    "StatisticsResult",
+    "StatisticsResultStatus",
     "StringArrayResult",
     "StringArrayResultStatus",
     "TiledLevel",
